--- a/Front_End/Turma44/index.html
+++ b/Front_End/Turma44/index.html
@@ -27,8 +27,8 @@
     </article>
 
     <section id="musicas">
-        <h3> Músicas</h3>
-        <img src="/assets/img/musicas.jpg" width="300" height="250" border-radius="50%">
+        <h2> Músicas</h2>
+        <img src="/assets/img/musicas.jpg" width="300" height="250" alt="imagem da musica">
         <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
             aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
             Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni
@@ -48,8 +48,8 @@
     </section>
 
     <section id="series">
-        <h3> Séries</h3>
-        <img src="/assets/img/series.jpg" width="300" height="250" border-radius="50%">
+        <h2> Séries</h2>
+        <img src="/assets/img/series.jpg" width="300" height="250" alt="imagem da série Stranger Things">
         <p>"At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti
             atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique
             sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum
@@ -71,8 +71,7 @@
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 
-<footer>
-    <p>Desenvolvido por Rebecca Cruz</p>
+<footer>Desenvolvido por Rebecca Cruz
     <p><a href="contato.html">Fale Conosco</a></p>
 </footer>
 
