adding css style

--- a/Front_End/Turma44/contato.html
+++ b/Front_End/Turma44/contato.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stylecont.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Contato</title>
 </head>
 
 <body>
 
     <nav>
-        <a href="index.html">Início</a> |
+        <a href="index.html">Home</a>
     </nav>
     <br>
     <section>
