--- a/Fund_Web/Turma44/contato.html
+++ b/Fund_Web/Turma44/contato.html
@@ -16,33 +16,40 @@
     </nav>
     <br>
     <section>
-        <form method="post" action="" id="contato">
-            <fieldset>
-                <legend>Contato</legend>
-                <ul>
-                    <p> Informe seus dados para entrarmos em contato:</p>
 
-                    <li><label for="name">Nome: </label><input type="text" name="name" id="name" value=""></li><br>
-                    <li><label for="email">E-mail: </label><input type="email" name="email" id="email" value=""></li>
-                    <br>
-                    <li><label>Telefone: <input required name="tel" pattern="[0−9]2[\s][0-9]{4}-[0-9]{4}"></label> (xx)
-                        xxxx-xxxx <br><br></li>
-                    <br>
-                </ul>
+        <fieldset>
+            <legend>Contato</legend>
 
-                <ul>
+            <p> Informe seus dados para entrarmos em contato:</p>
 
-                    <li><label for="name">Mensagem: </label><input type="text" name="name" id="name" value=""></li><br>
+            <form>
+                <label for="nome">Nome: </label>
+                <input type="text" id="nome" onkeyup="validaNome()">
+                <div id="txtNome"></div>
+                <br><br>
+                <label for="email">E-mail: </label>
+                <input type="email" id="email" onkeyup="validaEmail()">
+                <div id="txtEmail"></div>
+                <br><br>
 
-                    <input type="checkbox" name="test" id="test" value="test"><label for="test">Estou ciente e quero
-                        continuar</label> <br>
+                <label for="mensagem">Mensagem: </label>
+                <textarea name="mensagem" id="mensagem" cols="60" rows="5" onkeyup="validaMensagem()"></textarea>
+                <div id="txtMensagem"></div>
+                <br><br>
 
-                </ul>
-            </fieldset>
-            <br>
-            <input type="submit" value="Enviar"><br>
-            <br>
-    </section>
+                <input type="checkbox" name="test" id="test" value="test"><label for="test">Estou ciente e quero
+                    continuar</label> <br><br>
+
+                <button onclick="verificarCampos()">Enviar</button>
+
+            </form>
+            <div>
+
+            </div>
+
+        </fieldset>
+
+        <script src="/assets/js/script.js"></script>
 </body>
 
 </html>
