--- a/Fund_Web/Turma44/index.html
+++ b/Fund_Web/Turma44/index.html
@@ -28,55 +28,149 @@
         </p>
     </article>
 
-    <section id="musicas">
-        <h2> Músicas</h2>
-        <img src="/assets/img/musicas.jpg" width="300" height="200" alt="imagem da musica">
-        <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
-            aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-            Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni
-            dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor
-            sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore
-            magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis
-            suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in
-            ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas
-            nulla pariatur?"</p>
+    <section class="principal">
+
+        <section id="musicas">
+            <h2> Músicas</h2>
+            <div class="container">
+                <div class="box">
+                    <div class="inner">
+                        <div class="front">
+                            <img src="/assets/img/yellowcard.jpg" alt="imagem da musica">
+                        </div>
+                        <div class="back">
+                            <h3>Yellowcard</h3>
+                            <p>Flórida, EUA.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <div class="inner">
+                        <div class="front">
+                            <img src="/assets/img/post.jpg" alt="imagem da musica">
+                        </div>
+                        <div class="back">
+                            <h3>Post Malone</h3>
+                            <p>Nova Iorque, EUA.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <div class="inner">
+                        <div class="front">
+                            <img src="/assets/img/pod.jpg" alt="imagem da musica">
+                        </div>
+                        <div class="back">
+                            <h3>P.O.D</h3>
+                            <p>Califórnia, EUA.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam
+                rem
+                aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
+                explicabo.
+                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni
+                dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia
+                dolor
+                sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et
+                dolore
+                magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis
+                suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit
+                qui in
+                ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas
+                nulla pariatur?"</p>
 
 
-        <ul>
-            <li>Musica 1</li>
-            <li>Musica 2</li>
-            <li>Musica 3</li>
-        </ul>
+            <ul>
+                <li><a href="https://www.youtube.com/c/yellowcard">Yellowcard</a></li>
+                <li> <a href="https://www.youtube.com/c/postmalone">Post Malone</a></li>
+                <li> <a href="https://www.youtube.com/channel/UC3B67QDqkDsS6H4SGpoYEIg">P.O.D</a></li>
+            </ul>
+        </section>
+        <br>
+        <section id="series">
+            <h2> Séries</h2>
+            <div class="container">
+                <div class="box">
+                    <div class="inner">
+                        <div class="front">
+                            <img src="/assets/img/series.jpg" alt="imagem de Stranger Things">
+                        </div>
+                        <div class="back">
+                            <h3>Heading</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <div class="inner">
+                        <div class="front">
+                            <img src="/assets/img/thegoodplace.png" alt="imagem de Stranger Things">
+                        </div>
+                        <div class="back">
+                            <h3>Heading</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <div class="inner">
+                        <div class="front">
+                            <img src="/assets/img/jane.jpg" alt="imagem de Stranger Things">
+                        </div>
+                        <div class="back">
+                            <h3>Heading</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <p>"At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
+                deleniti
+                atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident,
+                similique
+                sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum
+                facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil
+                impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor
+                repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet
+                ut et
+                voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente
+                delectus,
+                ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat."
+            </p>
+
+            <ul>
+                <li> <a href="https://pt.wikipedia.org/wiki/Stranger_Things">Stranger Things</a></li>
+                <li> <a href="https://pt.wikipedia.org/wiki/The_Good_Place">The Good Place</a></li>
+                <li> <a href="https://pt.wikipedia.org/wiki/Jane_the_Virgin">Jane the virgin</a></li>
+            </ul>
+        </section>
+        <br>
+        <br>
+        <br>
+
     </section>
-    <br>
-    <section id="series">
-        <h2> Séries</h2>
-        <img src="/assets/img/series.jpg" width="300" height="200" alt="imagem da série Stranger Things">
-        <p>"At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti
-            atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique
-            sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum
-            facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil
-            impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor
-            repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et
-            voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus,
-            ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat."</p>
 
-        <ul>
-            <li>Série 1</li>
-            <li>Série 2</li>
-            <li>Série 3</li>
-        </ul>
-    </section>
-    <br>
-    <br>
-    <br>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=5qap5aO4i9A" frameborder="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <footer>Desenvolvido por Rebecca Cruz
+        <p><a href="contato.html">Fale Conosco</a></p>
+    </footer>
+
+    <script src="/assets/js/script.js"></script>
+
 </body>
-
-<footer>Desenvolvido por Rebecca Cruz
-    <p><a href="contato.html">Fale Conosco</a></p>
-</footer>
 
 </html>
